<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/movie_detail_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_detail_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        >

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/movie_detail_poster_blur"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_detail_poster"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/welcome_icon" />

            <com.weijun.assuarancetechnologyassessment.components.TriangleView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="bottom" />

            <ImageView
                android:id="@+id/movie_detail_poster_clear"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="36dp"
                android:contentDescription="@string/movie_detail_poster"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/welcome_icon" />

            <ImageButton
                android:id="@+id/movie_detail_back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/circular_button_style"
                android:padding="12dp"
                android:src="@drawable/baseline_close_24"
                app:color="@color/blue"
                app:tint="@color/blue" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/movie_detail_ratings_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frameLayout">

            <RatingBar
                android:id="@+id/movie_detail_ratings_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:clickable="false"
                android:numStars="5"
                android:progressBackgroundTint="@color/unselected_star"
                android:progressTint="@color/blue"
                android:rating="4.2"
                android:secondaryProgressTint="#00000000"
                android:stepSize="0.1" />

            <TextView
                android:id="@+id/movie_detail_ratings_imdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:gravity="start"
                android:text="@string/movie_detail_rating_percent"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_detail_ratings_imdb_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:gravity="start"
                android:text="@string/movie_detail_rating_imdb_count"
                android:textColor="@color/gray_blue"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/movie_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_ratings_layout">

            <TextView
                android:id="@+id/movie_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_ratings_layout" />

            <TextView
                android:id="@+id/movie_detail_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/movie_detail_category"
                android:textColor="@color/gray_blue"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_title" />

            <TextView
                android:id="@+id/movie_detail_plot_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/plot_summary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_category" />

            <TextView
                android:id="@+id/movie_detail_plot_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/plot_description"
                android:textColor="@color/gray_blue"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_plot_title" />

            <TextView
                android:id="@+id/movie_detail_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/movie_detail_ratings"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_plot_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movie_detail_ratings_list"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_detail_ratings" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>